feat: add MIT license file and specify license in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.2.0",
   "publisher": "cleancommit-dev",
   "icon": "resources/icon.png",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.90.0"
   },
