--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "publisher": "cleancommit-dev",
   "icon": "resources/icon.png",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brandonpaldom/clean-commit.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brandonpaldom/clean-commit/issues"
+  },
+  "homepage": "https://github.com/brandonpaldom/clean-commit#readme",
   "engines": {
     "vscode": "^1.90.0"
   },
