--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "CleanCommit",
   "description": "AI-powered commit message generator using Conventional Commits",
   "version": "0.2.0",
-  "publisher": "cleancommit-dev",
+  "publisher": "brandonpalmeros",
   "icon": "resources/icon.png",
   "license": "MIT",
   "repository": {
