--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
+    "publish:ovsx": "ovsx publish --pat $OVSX_PAT",
+    "publish:all": "npm run publish:ovsx && vsce publish",
     "compile": "npm run check-types && npm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
